<resources>
    <string name="app_name">LG Vertretungsplan</string>

    <string name="action_day">Tag</string>
    <string name="action_today">Heute</string>
    <string name="action_tomorrow">Morgen</string>
    <string name="action_signin">Anmelden</string>
    <string name="action_signout">Abmelden</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_classes">Klassen</string>
    <string name="action_all_classes">Alle</string>

    <string name="label_substituteTeacher">Vertretung:</string>
    <string name="label_substituteSubject">Fach:</string>
    <string name="label_room">Raum:</string>
    <string name="label_replaces">Statt:</string>
    <string name="label_text">Text:</string>
    <string name="text_info">Keine weiteren Informationen verfügbar</string>
    <string name="text_no_entries">Keine Vertretungen</string>
    <string name="text_no_entries_sub">Für deine Klasse wurden keine Vertretungen gefunden</string>

    <string name="error_login">Login Fehlgeschlagen (Nutzernamen und Passwort überprüfen)</string>
    <string name="title_activity_update">UpdateActivity</string>


</resources>
