<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_today" android:title="@string/action_today"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_tomorrow" android:title="@string/action_tomorrow"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_signout" android:title="@string/action_signout"
        android:orderInCategory="100" app:showAsAction="never" />
    <!--<item android:id="@+id/action_submenu" android:title="Klassen" android:orderInCategory="100" app:showAsAction="never">
        <menu>
            <item android:title="First"/>
            <item android:title="Second"/>
        </menu>
    </item>-->
</menu>
