<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:background="@drawable/plan_item">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="1"
            android:id="@+id/text_time"
            android:background="@drawable/badge"
            android:textColor="#fff"
            android:textSize="20sp"
            android:singleLine="true"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:layout_centerVertical="true"/>

        <RelativeLayout
            android:id="@+id/text_main_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">
            <TextView
                android:text="BK"
                android:id="@+id/text_subject"
                android:textColor="@color/primaryText"
                android:textSize="16sp"
                android:singleLine="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/text_classes"/>

            <TextView
                android:text="Vertretung"
                android:id="@+id/text_type"
                android:textColor="@color/secondaryText"
                android:textSize="14sp"
                android:singleLine="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_subject"/>

            <TextView
                android:text="6E"
                android:id="@+id/text_classes"
                android:textColor="@color/secondaryText"
                android:textSize="12sp"
                android:singleLine="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignBaseline="@id/text_subject"/>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="72dp"
        android:paddingRight="16dp"
        android:paddingBottom="20dp">
        <TextView
            android:text="@string/label_substituteTeacher"
            android:id="@+id/label_substituteTeacher"
            android:textColor="@color/secondaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginTop="2dp"/>
        <TextView
            android:text="@string/label_substituteSubject"
            android:id="@+id/label_substituteSubject"
            android:textColor="@color/secondaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_substituteTeacher"
            android:layout_marginRight="5dp"
            android:layout_marginTop="2dp"/>
        <TextView
            android:text="@string/label_room"
            android:id="@+id/label_room"
            android:textColor="@color/secondaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_substituteSubject"
            android:layout_marginRight="5dp"
            android:layout_marginTop="2dp"/>
        <TextView
            android:text="@string/label_replaces"
            android:id="@+id/label_replaces"
            android:textColor="@color/secondaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_room"
            android:layout_marginRight="5dp"
            android:layout_marginTop="2dp"/>
        <TextView
            android:text="@string/label_text"
            android:id="@+id/label_text"
            android:textColor="@color/secondaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_replaces"
            android:layout_marginRight="5dp"
            android:layout_marginTop="2dp"/>
        <TextView
            android:text="Anderson"
            android:id="@+id/text_substituteTeacher"
            android:textColor="@color/primaryText"
            android:singleLine="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/label_substituteTeacher"
            android:layout_alignBaseline="@id/label_substituteTeacher"/>
        <TextView
            android:text="Mu"
            android:id="@+id/text_substituteSubject"
            android:textColor="@color/primaryText"
            android:singleLine="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/label_substituteSubject"
            android:layout_alignBaseline="@id/label_substituteSubject"/>
        <TextView
            android:text="B1.05"
            android:id="@+id/text_room"
            android:textColor="@color/primaryText"
            android:singleLine="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/label_room"
            android:layout_alignBaseline="@id/label_room"/>
        <TextView
            android:text="Fr-17.4/1"
            android:id="@+id/text_replaces"
            android:textColor="@color/primaryText"
            android:singleLine="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/label_replaces"
            android:layout_alignBaseline="@id/label_replaces"/>
        <TextView
            android:text="Lorem ipsum dolor sit amet"
            android:id="@+id/text_text"
            android:textColor="@color/primaryText"
            android:singleLine="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/label_text"
            android:layout_alignBaseline="@id/label_text"/>
        <TextView
            android:text="@string/text_info"
            android:id="@+id/text_info"
            android:textColor="@color/secondaryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_text"
            android:layout_marginTop="2dp"/>
    </RelativeLayout>
</LinearLayout>